--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,9 @@ button {
 div.column.is-11 {
   margin: 0;
 }
+.fuck {
+  width: 14.28%;
+}
 /*.addColumn {
   margin-top: 61%;
   margin-bottom: 61%;
